--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "package.json",
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "sanity dev",
+    "dev": "npm-run-all --parallel dev:sanity dev:next",
     "start": "sanity start",
     "build": "sanity build",
     "deploy": "sanity deploy",
-    "deploy-graphql": "sanity graphql deploy"
+    "deploy-graphql": "sanity graphql deploy",
+    "dev:sanity": "sanity start",
+    "dev:next": "cd pcre2024 && next dev"
   },
   "keywords": [
     "sanity"
@@ -18,6 +20,7 @@
     "@portabletext/react": "^3.0.11",
     "@sanity/icons": "^2.11.0",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/orderable-document-list": "^1.2.1",
     "@sanity/ui": "^2.0.0",
     "@sanity/vision": "^3.34.0",
     "next-sanity": "^8.4.1",
@@ -31,6 +34,7 @@
     "@sanity/eslint-config-studio": "^3.0.1",
     "@types/react": "^18.0.25",
     "eslint": "^8.6.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.0.2",
     "typescript": "^5.1.6"
   },
