--- a/pcre2024/package.json
+++ b/pcre2024/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@portabletext/react": "^3.0.11",
     "@sanity/image-url": "^1.0.2",
     "next": "14.1.3",
