--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sanity/ui": "^2.0.0",
     "@sanity/vision": "^3.34.0",
     "next-sanity": "^8.4.1",
+    "next-sanity-image": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
